# computational-methods

./: README.md
code/: integration.ipynb
code/cpp/: .gitignore  CMakeLists.txt  main.cpp
code/cpp/basics/: animal.cpp  animal.h  constructors.cpp  expression_in_cpp.cpp  hello-world.cpp  if-else.cpp  main-function.cpp  random_numbers.cpp  vectors_in_cpp.cpp
code/cpp/matrices/: test.cpp  test.hpp
docs/: ann.rst  conf.py  index.rst  intro.rst  prelim.rst  python.rst
docs/_build/doctrees/: README.doctree  acknowledgement.doctree  ann.doctree  contributors.doctree  environment.pickle  gene.doctree  index.doctree  integrationODE.doctree  intro.doctree  optimize.doctree  (+2 more)
docs/_static/: modify.css
docs/_templates/: layout.html
docs/algorithm/: basics.rst  data-structure.rst  tree.rst
docs/artificial-neural-network/: neural-net-and-fem.rst
docs/cpp/: basics.rst  index.rst  manipulating-matrices.rst  numerical.rst
docs/database/: basics.rst  index.rst  mongodb.rst  sql.rst  warehousing.rst
docs/finite-element-method/: collocation-method.rst  index.rst  linear-elliptic-pde.rst  pde-and-boundary-conditions.rst
docs/integral/: index.rst  integrationODE.rst
docs/js/: index.rst  special.rst
docs/neutrino-oscillations/: index.rst
docs/numerical-methods/: euler.rst  gene.rst
docs/preliminary/: data-structure.rst  numerical-basics.rst
docs/python/: index.rst
docs/references/: index.rst
docs/tech/: git.rst
docs/tensorflow/: index.rst
docs/time-series/: index.rst
docs/tools/: data-warehouse.rst  gnuplot.rst  index.rst  visualization.rst
(+314 files in other folders)
